@@ -16,6 +16,7 @@ test2_v0      = 1
 remove = strict
 remove = warnings
 remove = base
+remove = constant
 remove = Text::ParseWords
 
 ;[Prereqs]
